# knetwalk

./: .flatpak-manifest.json  .kde-ci.yml  AUTHORS  CMakeLists.txt  SConstruct  TODO  configure.in.in  generic.py  kde.py  snapcraft.yaml
autotests/: CMakeLists.txt  abstractgridtest.cpp
doc/: CMakeLists.txt  index.docbook
po/ar/: knetwalk.po
po/ast/: knetwalk.po
po/be/: knetwalk.po
po/bg/: knetwalk.po
po/br/: knetwalk.po
po/bs/: knetwalk.po
po/ca/: knetwalk.po
po/ca/docs/knetwalk/: index.docbook
po/ca@valencia/: knetwalk.po
po/cs/: knetwalk.po
po/cs/docs/knetwalk/: index.docbook
po/csb/: knetwalk.po
po/cy/: knetwalk.po
po/da/: knetwalk.po
po/de/: knetwalk.po
po/de/docs/knetwalk/: index.docbook
po/el/: knetwalk.po
po/en_GB/: knetwalk.po
po/eo/: knetwalk.po
po/es/: knetwalk.po
po/es/docs/knetwalk/: index.docbook
po/et/: knetwalk.po
po/et/docs/knetwalk/: index.docbook
po/eu/: knetwalk.po
po/fa/: knetwalk.po
po/fi/: knetwalk.po
po/fr/: knetwalk.po
po/fr/docs/knetwalk/: index.docbook
po/ga/: knetwalk.po
po/gl/: knetwalk.po
po/he/: knetwalk.po
po/hi/: knetwalk.po
po/hne/: knetwalk.po
po/hr/: knetwalk.po
po/hu/: knetwalk.po
po/ia/: knetwalk.po
po/id/: knetwalk.po
po/id/docs/knetwalk/: index.docbook
po/is/: knetwalk.po
po/it/: knetwalk.po
po/it/docs/knetwalk/: index.docbook
po/ja/: knetwalk.po
po/ja/docs/knetwalk/: index.docbook
po/ka/: knetwalk.po
po/kk/: knetwalk.po
po/km/: knetwalk.po
po/ko/: knetwalk.po
po/lt/: knetwalk.po
po/lv/: knetwalk.po
po/mai/: knetwalk.po
po/mk/: knetwalk.po
po/ml/: knetwalk.po
po/mr/: knetwalk.po
po/nb/: knetwalk.po
po/nds/: knetwalk.po
po/ne/: knetwalk.po
po/nl/: knetwalk.po
po/nl/docs/knetwalk/: index.docbook
po/nn/: knetwalk.po
po/oc/: knetwalk.po
po/pa/: knetwalk.po
po/pl/: knetwalk.po
po/pl/docs/knetwalk/: index.docbook
po/pt/: knetwalk.po
po/pt/docs/knetwalk/: index.docbook
po/pt_BR/: knetwalk.po
po/pt_BR/docs/knetwalk/: index.docbook
po/ro/: knetwalk.po
po/ru/: knetwalk.po
po/ru/docs/knetwalk/: index.docbook
po/sa/: knetwalk.po
po/se/: knetwalk.po
po/sk/: knetwalk.po
po/sl/: knetwalk.po
po/sl/docs/knetwalk/: index.docbook
po/sq/: knetwalk.po
po/sr/: knetwalk.po
po/sr@ijekavian/: knetwalk.po
po/sr@ijekavianlatin/: knetwalk.po
po/sr@latin/: knetwalk.po
po/sv/: knetwalk.po
po/sv/docs/knetwalk/: index.docbook
po/te/: knetwalk.po
po/th/: knetwalk.po
po/tr/: knetwalk.po
po/tr/docs/knetwalk/: index.docbook
po/ug/: knetwalk.po
po/uk/: knetwalk.po
po/uk/docs/knetwalk/: index.docbook
po/zh_CN/: knetwalk.po
po/zh_TW/: knetwalk.po
src/: CMakeLists.txt  Makefile.am  Messages.sh  SConscript  abstractgrid.cpp  abstractgrid.h  cell.cpp  cell.h  config-knetwalk.h.cmake  consts.h  customgame.ui  defines.h  eventsrc  fielditem.cpp  fielditem.h  gameview.cpp  gameview.h  general.ui  globals.h  highscores.cpp  highscores.h  knetwalk.desktop  knetwalk.kcfg  knetwalk.notifyrc  knetwalk.qrc  knetwalkui.rc  main.cpp  mainwindow.cpp  mainwindow.h  org.kde.knetwalk.appdata.xml  org.kde.knetwalk.desktop  renderer.cpp  renderer.h  scene.cpp  scene.h  settings.kcfgc  view.cpp  view.h
src/pics/: CMakeLists.txt  Makefile.am  SConscript  all.svgz  hisc-app-knetwalk.svgz  hisc-apps-knetwalk.svgz  knetwalk.svgz
src/qml/: Cable.qml  CanvasItem.qml  Cell.qml  logic.js  main.qml
src/sounds/: CMakeLists.txt  Makefile.am
tests/: CMakeLists.txt  abstractgridtest.cpp
themes/: CMakeLists.txt  default.desktop  default.svgz  electronic.desktop  electronic.svgz
