



########### install files ###############

install( FILES background.png background_locked.png cable0001.png cable0010.png cable0011.png cable0100.png cable0101.png cable0110.png cable0111.png cable1000.png cable1001.png cable1010.png cable1011.png cable1100.png cable1101.png cable1110.png computer1.png computer2.png server.png  DESTINATION  ${DATA_INSTALL_DIR}/knetwalk/ )

kde4_install_icons( ${ICON_INSTALL_DIR}   )


#
