



########### install files ###############

install( FILES click.wav connect.wav start.wav turn.wav win.wav  DESTINATION  ${DATA_INSTALL_DIR}/knetwalk/sounds )




#original Makefile.am contents follow:

#
#sounds_DATA = click.wav connect.wav start.wav turn.wav win.wav
#
#soundsdir = $(kde_datadir)/knetwalk/sounds
